# learningC

./: CMakeLists.txt  README.md  cashnotes.c  celsius.c  dweight.c  dweight2.c  interest.c  maths.c  polynomial.c  pun.c  spaces.c  sphere.c  tax.c  test.c  tick.c  uninitialized.c
